Fixed vertical alignement of the main loading spinner

--- a/src/web/assets/pluginstore/src/sass/main.scss
+++ b/src/web/assets/pluginstore/src/sass/main.scss
@@ -25,6 +25,10 @@ $minHorizontalUiWidth: $minFullUiWidth - $sidebarWidth;
   }
 }
 
+#main-content #content {
+  position: relative;
+}
+
 .main-loading {
   position: absolute;
   top: 50%;
